<resources>
    <string name="app_name">TrackerFit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="objectives_dialog_name">Select your goal</string>
    <string name="measurement_dialog_name">Select your measurement</string>
    <string name="goals">Goals</string>
    <string name="measurements">Measurements</string>
    <string name="goal_value">Goal value</string>
    <string name="goal_date">Goal Date</string>
    <string name="notes">Notes</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="maintain">Maintain</string>
    <string name="gain">Gain</string>
    <string name="lose">Lose</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight</string>
    <string name="body_fat">Body Fat</string>
</resources>
